--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest"
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
@@ -29,10 +30,26 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "@testing-library/react-native": "^5.0.3",
     "@types/axios": "^0.14.0",
+    "@types/jest": "^26.0.5",
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
+    "axios-mock-adapter": "^1.18.2",
+    "jest-expo": "^38.0.2",
     "typescript": "~3.9.5"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "testMatch": [
+      "**/__tests__/**/*.test.tsx"
+    ],
+    "setupFilesAfterEnv": [
+      "@testing-library/react-native/cleanup-after-each"
+    ],
+    "setupFiles": [
+      "<rootDir>/src/mock.ts"
+    ]
   },
   "private": true
 }
